feat: should be functional

--- a/OSEmulator.vcxproj
+++ b/OSEmulator.vcxproj
@@ -131,15 +131,17 @@
     <ClCompile Include="AConsole.cpp" />
     <ClCompile Include="BaseScreen.cpp" />
     <ClCompile Include="ConsoleManager.cpp" />
-    <ClCompile Include="MainScreen.cpp" />
-    <ClCompile Include="OSEmulator.cpp" />
+    <ClCompile Include="MainConsole.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Process.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AConsole.h" />
     <ClInclude Include="BaseScreen.h" />
     <ClInclude Include="ConsoleManager.h" />
-    <ClInclude Include="MainScreen.h" />
+    <ClInclude Include="MainConsole.h" />
+    <ClInclude Include="Process.h" />
     <ClInclude Include="TypedefRepo.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
