--- a/OSEmulator.vcxproj
+++ b/OSEmulator.vcxproj
@@ -158,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="3D_CSOPESY.txt" />
+    <Text Include="backing_store.txt" />
     <Text Include="config.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
